Changed User Model. Added templates. Added bootstrap - bootstrap is now a dependency. Added slugs for About pages. Added navbar.

--- a/myproject/templates/index.html
+++ b/myproject/templates/index.html
@@ -1,12 +1,11 @@
-<html>
-    <head>
-        <title>
-            Projecting
-        </title>
-    </head>
-    <body>
-        <p>
-            Hello world
-        </p>
-    </body>
-</html>
+{% extends "base.html" %}
+
+{% block content %}
+    <h1>Projecting</h1>
+    <p>
+        Welcome to the landing page for my personal projects. 
+    </p>
+    <button type="submit" class="btn btn-primary">
+        Submit
+    </button>
+{% endblock content %}
