Added static files dirs. Updated gitignore. Updated readme for db. Added resume. Added pdf viewer for resume on home

--- a/myproject/templates/index.html
+++ b/myproject/templates/index.html
@@ -5,6 +5,11 @@
     <p>
         Welcome to the landing page for my personal projects. 
     </p>
+    {% load static %}
+    <object data={% static 'resume.pdf' %} type="application/pdf" width="100%" height="800px">
+        <p>No PDF browser plugin available.</p>
+        <p><a href="resume.pdf">Click here to download the PDF</a></p>
+    </object> 
     <button type="submit" class="btn btn-primary">
         Submit
     </button>
